--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Урок №6. Псевдоклассы.</title>
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-	
+	<div class="block">
+		<p>
+			<a class="link" href="#">Lorem</a> ipsum dolor sit amet consectetur adipisicing elit. Vitae minus expedita ab
+			laboriosam possimus fuga ipsam
+			aspernatur recusandae sequi, nemo error omnis deserunt repudiandae atque quos natus qui beatae doloribus.
+		</p>
+		<p>
+			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim ipsum fugit quisquam. Fugit voluptatem, suscipit
+			laboriosam eos et vero unde autem perferendis earum expedita minima, corporis veniam quas eaque accusantium!
+		</p>
+		<p>
+			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim ipsum fugit quisquam. Fugit voluptatem, suscipit
+			laboriosam eos et vero unde autem perferendis earum expedita minima, corporis veniam quas eaque accusantium!
+		</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sed enim, laudantium, unde id consequatur, nostrum eos molestias corrupti blanditiis ex dolorem repellat nobis quas quod praesentium est quam inventore!</p>
+	</div>
+	<form action="#">
+		<input type="text" class="textinput">
+		<button class="textbutton" type="submit">Отправить</button>
+	</form>
+	<ul class="list">
+		<li>text</li>
+		<li>text</li>
+		<li>text</li>
+		<li>text</li>
+		<li>text</li>
+	</ul>
 </body>
 
 </html>
